test/files/neg/t5903a/Test_2.scala
object Test extends App {
  import NewQuasiquotes._
  SomeTree match {
    case nq"$x + $y + $z" => println((x, y))
  }
}
